# sigmoid-commercial-intelligence-lab

./: .gitignore  .nojekyll  README.md  _quarto.yml  conftest.py  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  styles.scss
assets/: README.md  styles.css
cis/: commercial-intelligence-specification.html  commercial-intelligence-specification.md  decision-lifecycle.yml  object-model.yml  ontology.yml
commercial-health/: index.html  index.qmd
dashboards/: ai-readiness-scorecard.html  ai-readiness-scorecard.qmd  index.html  index.qmd  market-prioritisation.html  market-prioritisation.qmd  positioning-dashboard.html  positioning-dashboard.qmd
decisions/: gtm-evidence-gate.html  gtm-evidence-gate.qmd  index.html  index.qmd  market-entry.html  market-entry.qmd  positioning.html  positioning.qmd
docs/: FIRST_EVIDENCE_SPRINT.md
evidence/: claims-confidence.html  claims-confidence.qmd  evidence-register.html  evidence-register.qmd  index.html  index.qmd  proposal-hypothesis-v01.html  proposal-hypothesis-v01.qmd
frameworks/: ai_readiness_index.yml  commercial_health_index.yml  customer_fit_score.yml  index.html  index.qmd  market_prioritisation.yml  message_house.yml  positioning_canvas.yml  pricing_model.yml
governance/: index.html  index.qmd  testing-standard.html  testing-standard.qmd
notebooks/: 01_market_prioritisation.ipynb  02_ai_readiness_index.ipynb  03_positioning_analysis.ipynb
references/: bibliography.bib  sources.md
src/: __init__.py  chi.py  evidence.py  ontology.py  registers.py  scoring.py  (+2 more)
(+79 files in other folders)
