[project]
name = "sigmoid-commercial-intelligence-lab"
version = "0.1.0"
description = "Commercial Intelligence Lab — evidence-based, testable commercial strategy for Sigmoid Analytica, governed by the Commercial Intelligence Specification (CIS)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Sigmoid Analytica" }]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.18",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pandera>=0.18",
    "pydantic>=2.5",
    "networkx>=3.1",
    "scikit-learn>=1.3",
    "jupyter>=1.0",
    "ipykernel>=6.25",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"
